Junit,Jackson setup